--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,11 @@
   status = 200
 
 [[redirects]]
+  from = "/lab/*"
+  to = "/index.html"
+  status = 200
+
+[[redirects]]
   from = "http://lab.satisgraphtory2.com/*"
   to = "http://satisgraphtory2.com/lab/:splat"
   status = 200
