--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-localize-redux": "^3.5.3",
     "react-redux": "^7.0.3",
     "react-router": "^5.0.0",
