Added more subdomains

--- a/netlify.toml
+++ b/netlify.toml
@@ -17,3 +17,23 @@
   from = "https://lab.satisgraphtory2.com/*"
   to = "https://satisgraphtory2.com/lab/:splat"
   status = 200
+
+[[redirects]]
+  from = "http://graph.satisgraphtory2.com/*"
+  to = "http://satisgraphtory2.com/graph/:splat"
+  status = 200
+
+[[redirects]]
+  from = "https://graph.satisgraphtory2.com/*"
+  to = "https://satisgraphtory2.com/graph/:splat"
+  status = 200
+
+[[redirects]]
+  from = "http://hub.satisgraphtory2.com/*"
+  to = "http://satisgraphtory2.com/hub/:splat"
+  status = 200
+
+[[redirects]]
+  from = "https://hub.satisgraphtory2.com/*"
+  to = "https://satisgraphtory2.com/hub/:splat"
+  status = 200
