--- a/netlify.toml
+++ b/netlify.toml
@@ -10,30 +10,30 @@
 
 [[redirects]]
   from = "http://lab.satisgraphtory2.com/*"
-  to = "http://satisgraphtory2.com/lab/:splat"
+  to = "/index.html"
   status = 200
 
 [[redirects]]
   from = "https://lab.satisgraphtory2.com/*"
-  to = "https://satisgraphtory2.com/lab/:splat"
+  to = "/index.html"
   status = 200
 
 [[redirects]]
   from = "http://graph.satisgraphtory2.com/*"
-  to = "/graph/:splat"
+  to = "/index.html"
   status = 200
 
 [[redirects]]
   from = "https://graph.satisgraphtory2.com/*"
-  to = "/graph/:splat"
+  to = "/index.html"
   status = 200
 
 [[redirects]]
   from = "http://hub.satisgraphtory2.com/*"
-  to = "/hub/:splat"
+  to = "/index.html"
   status = 200
 
 [[redirects]]
   from = "https://hub.satisgraphtory2.com/*"
-  to = "/hub/:splat"
+  to = "/index.html"
   status = 200
