--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "flow-bin": "^0.98.1",
     "husky": "^2.4.0",
     "lint-staged": "^8.1.7",
+    "lodash": "^4.17.11",
     "prettier": "^1.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
