--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-loadable": "^5.5.0",
     "react-localize-redux": "^3.5.3",
     "react-redux": "^7.0.3",
     "react-router": "^5.0.0",
