--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3": "^5.9.2",
     "firebase": "^6.0.4",
     "flow-bin": "^0.98.1",
+    "fontfaceobserver": "^2.1.0",
     "husky": "^2.4.0",
     "lint-staged": "^8.1.7",
     "lodash": "^4.17.11",
@@ -31,6 +32,7 @@
     "react-select": "^3.0.4",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "roboto-fontface": "^0.10.0",
     "typeface-roboto-condensed": "0.0.54",
     "typescript": "^3.4.5"
   },
