Added coffee cheetos chicken

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "SatisGraphtory",
-  "name": "SatisGraphtory Planning App",
+  "name": "SatisGraphtory",
   "icons": [
     {
       "src": "favicon.ico",
