--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prettier": "^1.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-loadable": "^5.5.0",
