--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "normalize-wheel": "^1.0.1",
     "prettier": "^1.17.1",
     "prop-types": "^15.7.2",
+    "protobufjs": "^6.8.8",
+    "protocol-buffers-encodings": "^1.1.0",
     "react": "^16.8.6",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.8.6",
@@ -43,7 +45,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "proto:linux": "echo $npm_package_version",
+    "proto:windows": "pbjs --es6 -t json src/proto/datatypes.proto -o src/generated/%npm_package_version%-schema.json"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -60,7 +64,9 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "protocol-buffers": "^4.1.0"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
