--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm run proto:linux && react-scripts build",
+    "build": "npm run proto && react-scripts build",
     "build:windows": "npm run proto:windows && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
