--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^16.8.6",
     "react-apollo": "^2.5.8",
     "react-custom-scrollbars": "^4.2.1",
+    "react-device-detect": "^1.6.5",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-loadable": "^5.5.0",
