Add some initial cluster classes

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^4.0.0-rc.0",
     "@types/jest": "^24.0.15",
+    "@types/mathjs": "^6.0.0",
     "@types/node": "^12.6.8",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
@@ -23,6 +24,7 @@
     "husky": "^2.7.0",
     "lint-staged": "^8.2.1",
     "lodash": "^4.17.15",
+    "mathjs": "^6.0.3",
     "multi-metagen": "^2.6.0",
     "normalize-wheel": "^1.0.1",
     "prettier": "^1.18.2",
