--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "giraffe",
   "version": "0.1.0",
+  "main": "public/electron.js",
+  "author": "Rhocode",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@emotion/core": "^10.0.15",
@@ -16,6 +19,7 @@
     "clean-deep": "^3.0.2",
     "clsx": "^1.0.4",
     "d3": "^5.9.7",
+    "electron-is-dev": "^1.1.0",
     "firebase": "^6.3.4",
     "flow-bin": "^0.98.1",
     "fontfaceobserver": "^2.1.0",
@@ -67,7 +71,11 @@
     "generate-images-machines": "cross-env-shell metagen --filter=png src/apps/Graph/libraries/SGLib/images/machines es6WithFileExtension",
     "generate": "npm run proto && npm run generate-schemas && npm run generate-images",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "electron-start": "concurrently 'cross-env BROWSER=none npm start' 'wait-on http://localhost:3000 && electron .'",
+    "preelectron-build": "npm run build",
+    "electron-build": "electron-builder",
+    "electron-build-cross": "electron-builder -mwl"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -89,9 +97,13 @@
     "@storybook/addon-links": "^5.1.10",
     "@storybook/addons": "^5.1.10",
     "@storybook/react": "^5.1.10",
+    "concurrently": "^4.1.1",
     "cross-env": "^5.2.0",
+    "electron": "^6.0.1",
+    "electron-builder": "^21.2.0",
     "jest-canvas-mock": "^2.1.0",
-    "protocol-buffers": "^4.1.0"
+    "protocol-buffers": "^4.1.0",
+    "wait-on": "^3.3.0"
   },
   "husky": {
     "hooks": {
@@ -103,5 +115,36 @@
       "prettier --single-quote --write",
       "git add"
     ]
+  },
+  "build": {
+    "appId": "com.my-website.my-app",
+    "productName": "cra-test",
+    "copyright": "Copyright © 2019 ${author}",
+    "mac": {
+      "category": "public.app-category.utilities",
+      "target": "dir"
+    },
+    "win": {
+      "target": [
+        {
+          "target": "dir",
+          "arch": [
+            "x64",
+            "ia32"
+          ]
+        }
+      ]
+    },
+    "linux": {
+      "target": "dir"
+    },
+    "files": [
+      "build/**/*",
+      "node_modules/**/*"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    },
+    "npmRebuild": false
   }
 }
