Add local router instead

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
   },
+  "homepage": "./",
   "eslintConfig": {
     "extends": "react-app"
   },
