--- a/package.json
+++ b/package.json
@@ -72,8 +72,8 @@
     "generate": "npm run proto && npm run generate-schemas && npm run generate-images",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
-    "electron-start": "concurrently 'cross-env BROWSER=none npm start' 'wait-on http://localhost:3000 && electron .'",
-    "preelectron-build": "npm run build",
+    "electron-start": "concurrently \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
+    "preelectron-build": "cross-env REACT_APP_ELECTRON=true npm run build",
     "electron-build": "electron-builder",
     "electron-build-cross": "electron-builder -mwl"
   },
