--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ cache:
     - $HOME/.cache/electron-builder
 
 script:
-  - npm build
+  - npm run build
   - npm run test
   - |
     if [ "$TRAVIS_OS_NAME" == "linux" ]; then
