--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eject": "react-scripts eject",
     "prestart": "npm run generate",
     "prebuild": "npm run generate",
+    "pretest": "npm run generate",
     "proto": "cross-env-shell pbjs --es6 -t json src/proto/*.json src/proto/DataTypes.proto -o src/generated/generated-$npm_package_version-schema.json",
     "preproto": "cross-env-shell pbjs --es6 -t proto3 src/proto/*.json -o src/proto/Generated.proto",
     "generate-schemas": "cross-env-shell metagen --filter=json src/generated es6WithFileExtension",
