--- a/.travis.yml
+++ b/.travis.yml
@@ -1,43 +1,41 @@
-matrix:
-  include:
-    - os: osx
-      osx_image: xcode10.2
-      language: node_js
-      node_js:
-        - "stable"
-      env:
-        - ELECTRON_CACHE=$HOME/.cache/electron
-        - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
+sudo: false
 
-    - os: linux
-      services: docker
-      language: generic
+language: node_js
+node_js: "9.11.1"
+
+before_install:
+  - cd app
 
 cache:
   directories:
     - node_modules
+    - app/node_modules
     - $HOME/.cache/electron
     - $HOME/.cache/electron-builder
+    - $HOME/.npm/_prebuilds
 
-script:
-  - npm run test
-  - |
-    if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-      docker run --rm \
-        --env-file <(env | grep -vE '\r|\n' | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS_TAG|TRAVIS|TRAVIS_REPO_|TRAVIS_BUILD_|TRAVIS_BRANCH|TRAVIS_PULL_REQUEST_|APPVEYOR_|CSC_|GH_|GITHUB_|BT_|AWS_|STRIP|BUILD_') \
-        --env ELECTRON_CACHE="/root/.cache/electron" \
-        --env ELECTRON_BUILDER_CACHE="/root/.cache/electron-builder" \
-        -v ${PWD}:/project \
-        -v ~/.cache/electron:/root/.cache/electron \
-        -v ~/.cache/electron-builder:/root/.cache/electron-builder \
-        electronuserland/builder:wine-02.17 \
-        /bin/bash -c "ls"
-    else
-      npm run electron-publish
-    fi
-before_cache:
-  - rm -rf $HOME/.cache/electron-builder/wine
+env:
+  global:
+    - ELECTRON_CACHE=$HOME/.cache/electron
+    - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
 
-branches:
-  only:
-    - "/^master$/"
+jobs:
+  include:
+    - stage: Test
+      if: branch = master
+      script:
+        - npm test
+    - stage: Deploy Windows & Mac
+      if: branch = master
+      os: osx
+      osx_image: xcode10.1
+      script:
+        - npm run electron-publish -- --mac --win
+      before_cache:
+        - rm -rf $HOME/.cache/electron-builder/wine
+    - stage: Deploy linux
+      if: branch = master
+      os: linux
+      dist: trusty
+      script:
+        - npm run electron-publish
