--- a/package.json
+++ b/package.json
@@ -69,9 +69,11 @@
     "preproto": "cross-env-shell pbjs --es6 -t proto3 src/proto/*.json -o src/proto/Generated.proto",
     "generate-schemas": "cross-env-shell metagen --filter=json src/generated es6WithFileExtension",
     "generate-images": "npm run generate-images-items && npm run generate-images-machines",
+    "generate-images-alt": "npm run generate-images-machines-alt",
     "generate-images-items": "cross-env-shell metagen --filter=png src/apps/Graph/libraries/SGLib/images/items es6WithFileExtension",
     "generate-images-machines": "cross-env-shell metagen --filter=png src/apps/Graph/libraries/SGLib/images/machines es6WithFileExtension",
-    "generate": "npm run proto && npm run generate-schemas && npm run generate-images",
+    "generate-images-machines-alt": "cross-env-shell metagen --filter=png src/apps/Graph/libraries/SGLib/images/alt/machines es6WithFileExtension",
+    "generate": "npm run proto && npm run generate-schemas && npm run generate-images && npm run generate-images-alt",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
     "electron-start": "concurrently \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
