Stage specific tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ language: node_js
 node_js:
   - "stable"
 
+branches:
+  only:
+    - master
+    - stable
+    -
 cache:
   directories:
     - $HOME/.npm
@@ -15,22 +20,26 @@ env:
     - ELECTRON_CACHE=$HOME/.cache/electron
     - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
 
+stages:
+  - name: Test
+  - name: Deploy Windows & Mac
+    if: branch = master
+  - name: Deploy Linux
+    if: branch = master
+
 jobs:
   include:
     - stage: Test
-      if: branch = master
       script:
         - npm test
     - stage: Deploy Windows & Mac
-      if: branch = master
       os: osx
       osx_image: xcode10.1
       script:
         - npm run release -- --mac --win
       before_cache:
         - rm -rf $HOME/.cache/electron-builder/wine
-    - stage: Deploy linux
-      if: branch = master
+    - stage: Deploy Linux
       os: linux
       dist: trusty
       script:
