--- a/.travis.yml
+++ b/.travis.yml
@@ -43,4 +43,4 @@ jobs:
       os: linux
       dist: trusty
       script:
-        - npm run release -- --linux
+        - npm run release -- --linux -c.snap.publish=github
