--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "description": "SatisGraphtory App",
   "dependencies": {
     "@emotion/core": "^10.0.15",
+    "@fortawesome/fontawesome-svg-core": "^1.2.22",
+    "@fortawesome/free-solid-svg-icons": "^5.10.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^4.0.0-rc.0",
     "@types/jest": "24.0.17",
@@ -42,9 +45,11 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-device-detect": "^1.7.5",
     "react-dom": "^16.8.6",
+    "react-focus-trap": "^2.7.1",
     "react-helmet": "^5.2.1",
     "react-loadable": "^5.5.0",
     "react-localize-redux": "^3.5.3",
+    "react-modal": "^3.10.1",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
@@ -53,6 +58,7 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "roboto-fontface": "^0.10.0",
+    "throttle-debounce": "^2.1.0",
     "typeface-roboto-condensed": "0.0.54",
     "typescript": "^3.5.3"
   },
