--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "12.7.1",
     "@types/react": "16.9.1",
     "@types/react-dom": "^16.8.5",
+    "@waiting/base64": "^4.2.9",
     "apollo-boost": "^0.4.3",
     "apollo-link-schema": "^1.2.3",
     "clean-deep": "^3.0.2",
