--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "husky": "^2.7.0",
     "lint-staged": "^8.2.1",
     "lodash": "^4.17.15",
+    "lzutf8": "^0.5.5",
     "mathjs": "6.0.4",
     "multi-metagen": "^2.6.0",
     "normalize-wheel": "^1.0.1",
