--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "private": true,
   "description": "SatisGraphtory App",
   "dependencies": {
+    "@devexpress/dx-react-core": "^2.0.3",
+    "@devexpress/dx-react-grid": "^2.0.3",
+    "@devexpress/dx-react-grid-material-ui": "^2.0.3",
     "@emotion/core": "^10.0.16",
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
     "@fortawesome/free-brands-svg-icons": "^5.10.2",
