--- a/netlify.toml
+++ b/netlify.toml
@@ -13,6 +13,12 @@
   to = "/index.html"
   status = 200
 
+
+[[redirects]]
+  from = "/data/*"
+  to = "/index.html"
+  status = 200
+
 [[redirects]]
   from = "http://lab.satisgraphtory2.com/*"
   to = "/index.html"
