--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "roboto-fontface": "^0.10.0",
+    "seamless-immutable": "^7.1.4",
     "throttle-debounce": "^2.1.0",
     "typeface-roboto-condensed": "0.0.54",
     "typescript": "^3.5.3"
