--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.10.2",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@material-ui/core": "^4.0.0-rc.0",
+    "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.0.0-rc.0",
     "@types/jest": "24.0.17",
     "@types/mathjs": "^6.0.2",
@@ -29,6 +29,7 @@
     "clean-deep": "^3.0.4",
     "clsx": "^1.0.4",
     "d3": "^5.11.0",
+    "downshift": "^3.2.12",
     "electron-is-dev": "^1.1.0",
     "firebase": "6.3.5",
     "flow-bin": "^0.98.1",
