--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@waiting/base64": "^4.2.9",
     "apollo-boost": "^0.4.4",
     "apollo-link-schema": "^1.2.3",
+    "autosuggest-highlight": "^3.1.1",
     "clean-deep": "^3.0.4",
     "clsx": "^1.0.4",
     "d3": "^5.11.0",
@@ -50,6 +51,7 @@
     "protocol-buffers-encodings": "^1.1.0",
     "react": "16.9.0",
     "react-apollo": "^2.5.8",
+    "react-autosuggest": "^9.4.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-device-detect": "^1.7.5",
     "react-dom": "^16.8.6",
