--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clean-deep": "^3.0.4",
     "clsx": "^1.0.4",
     "d3": "^5.11.0",
+    "deep-diff": "^1.0.2",
     "downshift": "^3.2.12",
     "electron-is-dev": "^1.1.0",
     "firebase": "6.3.5",
