--- a/package.json
+++ b/package.json
@@ -1,166 +1,1 @@
-{
-  "name": "giraffe",
-  "version": "0.1.0",
-  "main": "public/electron.js",
-  "author": "Rhocode",
-  "homepage": "./",
-  "private": true,
-  "description": "SatisGraphtory App",
-  "dependencies": {
-    "@devexpress/dx-react-core": "^2.0.3",
-    "@devexpress/dx-react-grid": "^2.0.3",
-    "@devexpress/dx-react-grid-material-ui": "^2.0.3",
-    "@emotion/core": "^10.0.16",
-    "@fortawesome/fontawesome-svg-core": "^1.2.22",
-    "@fortawesome/free-brands-svg-icons": "^5.10.2",
-    "@fortawesome/free-regular-svg-icons": "^5.10.2",
-    "@fortawesome/free-solid-svg-icons": "^5.10.2",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "@material-ui/core": "^4.3.3",
-    "@material-ui/icons": "^4.0.0-rc.0",
-    "@types/jest": "24.0.17",
-    "@types/mathjs": "^6.0.2",
-    "@types/node": "12.7.1",
-    "@types/react": "16.9.1",
-    "@types/react-dom": "^16.9.0",
-    "@waiting/base64": "^4.2.9",
-    "apollo-boost": "^0.4.4",
-    "apollo-link-schema": "^1.2.3",
-    "autosuggest-highlight": "^3.1.1",
-    "clean-deep": "^3.0.4",
-    "clsx": "^1.0.4",
-    "d3": "^5.11.0",
-    "deep-diff": "^1.0.2",
-    "downshift": "^3.2.12",
-    "electron-is-dev": "^1.1.0",
-    "firebase": "6.3.5",
-    "flow-bin": "^0.98.1",
-    "fontfaceobserver": "^2.1.0",
-    "graphql": "^14.5.3",
-    "graphql-tag": "^2.10.1",
-    "graphql-tools": "^4.0.5",
-    "husky": "^2.7.0",
-    "lint-staged": "^8.2.1",
-    "lodash": "^4.17.15",
-    "lzutf8": "^0.5.5",
-    "mathjs": "6.0.4",
-    "multi-metagen": "^2.6.0",
-    "normalize-wheel": "^1.0.1",
-    "prettier": "^1.18.2",
-    "prop-types": "^15.7.2",
-    "protobufjs": "^6.8.8",
-    "protocol-buffers-encodings": "^1.1.0",
-    "react": "16.9.0",
-    "react-apollo": "^2.5.8",
-    "react-autosuggest": "^9.4.3",
-    "react-custom-scrollbars": "^4.2.1",
-    "react-device-detect": "^1.7.5",
-    "react-dom": "^16.8.6",
-    "react-focus-trap": "^2.7.1",
-    "react-helmet": "^5.2.1",
-    "react-loadable": "^5.5.0",
-    "react-localize-redux": "^3.5.3",
-    "react-modal": "^3.10.1",
-    "react-redux": "^7.1.1",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.0",
-    "react-select": "^3.0.4",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "roboto-fontface": "^0.10.0",
-    "seamless-immutable": "^7.1.4",
-    "throttle-debounce": "^2.1.0",
-    "typeface-roboto-condensed": "0.0.54",
-    "typescript": "^3.5.3"
-  },
-  "scripts": {
-    "start": "cross-env REACT_APP_VERSION=$npm_package_version react-scripts start",
-    "build": "cross-env REACT_APP_VERSION=$npm_package_version react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "prestart": "npm run generate",
-    "prebuild": "npm run generate",
-    "pretest": "npm run generate",
-    "proto": "cross-env-shell pbjs --es6 -t json src/proto/*.json src/proto/DataTypes.proto -o src/generated/generated-$npm_package_version-schema.json",
-    "preproto": "cross-env-shell pbjs --es6 -t proto3 src/proto/*.json -o src/proto/Generated.proto",
-    "generate-schemas": "cross-env-shell metagen --filter=json src/generated es6WithFileExtension",
-    "generate-images": "npm run generate-images-items && npm run generate-images-machines",
-    "generate-images-alt": "npm run generate-images-machines-alt",
-    "generate-images-items": "cross-env-shell metagen --filter=png src/apps/Graph/libraries/SGLib/images/items es6WithFileExtension",
-    "generate-images-machines": "cross-env-shell metagen --filter=png src/apps/Graph/libraries/SGLib/images/machines es6WithFileExtension",
-    "generate-images-machines-alt": "cross-env-shell metagen --filter=png src/apps/Graph/libraries/SGLib/images/alt/machines es6WithFileExtension",
-    "generate": "npm run proto && npm run generate-schemas && npm run generate-images && npm run generate-images-alt",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public",
-    "electron-start": "concurrently \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
-    "preelectron-build": "cross-env REACT_APP_ELECTRON=true npm run build",
-    "electron-build": "electron-builder -c.extraMetadata.main=build/electron.js",
-    "electron-build-cross": "electron-builder -mwl -c.extraMetadata.main=build/electron.js",
-    "prerelease": "npm run build",
-    "release": "electron-builder --publish always",
-    "pretty": "prettier --single-quote --write src/**/*"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@storybook/addon-actions": "^5.1.11",
-    "@storybook/addon-links": "^5.1.11",
-    "@storybook/addons": "^5.1.11",
-    "@storybook/react": "^5.1.11",
-    "concurrently": "^4.1.2",
-    "cross-env": "^5.2.0",
-    "electron": "^6.0.5",
-    "electron-builder": "^21.2.0",
-    "jest-canvas-mock": "^2.1.1",
-    "protocol-buffers": "^4.1.0",
-    "wait-on": "^3.3.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --single-quote --write",
-      "git add"
-    ],
-    "public/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --single-quote --write",
-      "git add"
-    ]
-  },
-  "build": {
-    "appId": "com.my-website.my-app",
-    "productName": "cra-test",
-    "copyright": "Copyright © 2019 ${author}",
-    "publish": [
-      {
-        "provider": "github",
-        "owner": "rhocode",
-        "repo": "Giraffe"
-      }
-    ],
-    "files": [
-      "build/**/*",
-      "node_modules/**/*"
-    ],
-    "directories": {
-      "buildResources": "assets"
-    }
-  }
-}
+FJDKFJDSKFNJSDFJKFSF
