--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.0.0-rc.0",
+    "@octokit/rest": "^16.28.7",
     "@types/jest": "24.0.17",
     "@types/mathjs": "^6.0.2",
     "@types/node": "12.7.1",
@@ -27,6 +28,7 @@
     "apollo-boost": "^0.4.4",
     "apollo-link-schema": "^1.2.3",
     "autosuggest-highlight": "^3.1.1",
+    "base64-blob": "^1.4.1",
     "clean-deep": "^3.0.4",
     "clsx": "^1.0.4",
     "d3": "^5.11.0",
@@ -46,6 +48,7 @@
     "mathjs": "6.0.4",
     "multi-metagen": "^2.6.0",
     "normalize-wheel": "^1.0.1",
+    "octokit-create-pull-request": "^1.2.0",
     "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
     "protobufjs": "^6.8.8",
@@ -66,6 +69,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0",
     "react-select": "^3.0.4",
+    "react-syntax-highlighter": "^11.0.2",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "roboto-fontface": "^0.10.0",
