Adding package and package-lock for codechecks

--- a/package.json
+++ b/package.json
@@ -122,6 +122,8 @@
     ]
   },
   "devDependencies": {
+    "@codechecks/client": "^0.1.7",
+    "@codechecks/lighthouse-keeper": "^0.1.2",
     "@storybook/addon-actions": "^5.1.11",
     "@storybook/addon-links": "^5.1.11",
     "@storybook/addons": "^5.1.11",
