--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ env:
 
 stages:
   - name: Test
+  - name: lighthouse-keeper
   - name: Deploy Windows & Mac
     if: type != pull_request AND branch = master
   - name: Deploy Linux
@@ -27,6 +28,9 @@ jobs:
     - stage: Test
       script:
         - npm test
+    - stage: lighthouse-keeper
+      script:
+        - npm run build && npx lighthouse-keeper
     - stage: Deploy Windows & Mac
       os: osx
       osx_image: xcode10.1
