Add png for the larger image sizes

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "16.9.1",
     "@types/react-dom": "^16.9.0",
     "@waiting/base64": "^4.2.9",
+    "@welldone-software/why-did-you-render": "^3.3.3",
     "apollo-boost": "^0.4.4",
     "apollo-link-schema": "^1.2.3",
     "autosuggest-highlight": "^3.1.1",
@@ -60,6 +61,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-device-detect": "^1.7.5",
     "react-dom": "^16.8.6",
+    "react-flip-toolkit": "^7.0.4",
     "react-focus-trap": "^2.7.1",
     "react-helmet": "^5.2.1",
     "react-loadable": "^5.5.0",
@@ -126,6 +128,7 @@
     "@storybook/addon-links": "^5.1.11",
     "@storybook/addons": "^5.1.11",
     "@storybook/react": "^5.1.11",
+    "@types/d3": "^5.7.2",
     "concurrently": "^4.1.2",
     "cross-env": "^5.2.1",
     "electron": "^6.0.7",
