--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,23 @@
 sudo: false
 
-language: node_js
-node_js:
-  - "stable"
+os:
+  - linux
+  - osx
+
+matrix:
+  include:
+    - os: osx
+      osx_image: xcode10.2
+      language: node_js
+      node_js: "stable"
+      env:
+        - TRAVIS_BUILD_OS=osx
+    - os: linux
+      dist: trusty
+      services: docker
+      language: generic
+      env:
+        - TRAVIS_BUILD_OS=linux
 
 cache:
   directories:
@@ -18,9 +33,9 @@ env:
 stages:
   - name: Test
   - name: lighthouse-keeper
-  - name: Deploy Windows & Mac
+  - name: Deploy Windows & Linux
     if: type != pull_request AND branch = master
-  - name: Deploy Linux
+  - name: Deploy Mac
     if: type != pull_request AND branch = master
 
 jobs:
@@ -31,15 +46,24 @@ jobs:
     - stage: lighthouse-keeper
       script:
         - npm run build && npx codechecks
-    - stage: Deploy Windows & Mac
-      os: osx
-      osx_image: xcode10.1
+      env: TRAVIS_BUILD_OS=linux
+    - stage: Deploy Mac
       script:
-        - npm run release -- --mac --win
+        - npm run release -- --mac
+      env: TRAVIS_BUILD_OS=osx
       before_cache:
         - rm -rf $HOME/.cache/electron-builder/wine
     - stage: Deploy Linux
-      os: linux
-      dist: trusty
       script:
-        - npm run release -- --linux -c.snap.publish=github
+        - |
+          if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+            docker run --rm \
+              --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
+              -v ${PWD}:/project \
+              -v ~/.cache/electron:/root/.cache/electron \
+              -v ~/.cache/electron-builder:/root/.cache/electron-builder \
+              electronuserland/builder:wine \
+              /bin/bash -c "yarn --link-duplicates --pure-lockfile && npm run release -- --linux --win -c.snap.publish=github"
+      env: TRAVIS_BUILD_OS=linux
+      before_cache:
+        - rm -rf $HOME/.cache/electron-builder/wine
