--- a/.travis.yml
+++ b/.travis.yml
@@ -33,27 +33,26 @@ env:
 
 stages:
   - name: Test
+    if: os = linux
   - name: lighthouse-keeper
+    if: os = linux
   - name: Deploy Windows & Linux
-    if: type != pull_request AND branch = master
+    if: os = linux AND type != pull_request AND branch = master
   - name: Deploy Mac
-    if: type != pull_request AND branch = master
+    if: os = osx type != pull_request AND branch = master
 
 jobs:
   include:
     - stage: Test
       script:
         - npm test
-      env: TRAVIS_BUILD_OS=linux
     - stage: lighthouse-keeper
       script:
         - npm run build
         - npx codechecks
-      env: TRAVIS_BUILD_OS=linux
     - stage: Deploy Mac
       script:
         - npm run release -- --mac
-      env: TRAVIS_BUILD_OS=osx
       before_cache:
         - rm -rf $HOME/.cache/electron-builder/wine
     - stage: Deploy Linux
@@ -67,6 +66,5 @@ jobs:
               -v ~/.cache/electron-builder:/root/.cache/electron-builder \
               electronuserland/builder:wine \
               /bin/bash -c "yarn --link-duplicates --pure-lockfile && npm run release -- --linux --win -c.snap.publish=github"
-      env: TRAVIS_BUILD_OS=linux
       before_cache:
         - rm -rf $HOME/.cache/electron-builder/wine
