--- a/.travis.yml
+++ b/.travis.yml
@@ -33,33 +33,33 @@ env:
 
 stages:
   - name: Test
-    if: os = linux
   - name: lighthouse-keeper
-    if: os = linux
   - name: Deploy Windows & Linux
-    if: os = linux AND type != pull_request AND branch = master
+    if: type != pull_request AND branch = master
   - name: Deploy Mac
-    if: os = osx AND type != pull_request AND branch = master
+    if:type != pull_request AND branch = master
 
 jobs:
   include:
     - stage: Test
+      if: os = linux
       script:
         - npm test
     - stage: lighthouse-keeper
+      if: os = linux
       script:
         - npm run build
         - npx codechecks
     - stage: Deploy Mac
+      if: os = osx
       script:
         - npm run release -- --mac
       before_cache:
         - rm -rf $HOME/.cache/electron-builder/wine
     - stage: Deploy Linux
+      if: os = linux
       script:
-        - |
-          if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-            docker run --rm \
+        - docker run --rm \
               --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
               -v ${PWD}:/project \
               -v ~/.cache/electron:/root/.cache/electron \
