--- a/.travis.yml
+++ b/.travis.yml
@@ -40,17 +40,5 @@ jobs:
       before_cache:
         - rm -rf $HOME/.cache/electron-builder/wine
     - stage: Deploy Linux
-      os: linux
-      dist: trusty
-      services:
-        - docker
       script:
-        - docker run --rm \
-              --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
-              -v ${PWD}:/project \
-              -v ~/.cache/electron:/root/.cache/electron \
-              -v ~/.cache/electron-builder:/root/.cache/electron-builder \
-              electronuserland/builder:wine \
-              /bin/bash -c "yarn --link-duplicates --pure-lockfile && npm run release -- --linux --win -c.snap.publish=github"
-      before_cache:
-        - rm -rf $HOME/.cache/electron-builder/wine
+        - npm run release -- --linux --win -c.snap.publish=github
