--- a/.travis.yml
+++ b/.travis.yml
@@ -38,8 +38,12 @@ jobs:
       before_cache:
         - rm -rf $HOME/.cache/electron-builder/wine
     -
+      os: linux
+      dist: trusty
       script:
         - npm run release -- --linux -c.snap.publish=github
     -
+      os: linux
+      dist: trusty
       script:
         - npm run release -- --win
