--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ jobs:
       osx_image: xcode11
       script:
         - npm run build
-        - reavis_retry npm run release-standalone -- --mac
+        - travis_retry npm run release-standalone -- --mac
       before_cache:
         - rm -rf $HOME/.cache/electron-builder/wine
     -
