--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.5",
     "husky": "^3.0.5",
+    "immer": "^3.2.0",
     "lint-staged": "^9.2.5",
     "lodash": "^4.17.15",
     "lzutf8": "^0.5.5",
