--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-device-detect": "^1.7.5",
     "react-dom": "^16.9.0",
+    "react-dropdown-select": "^3.5.0",
     "react-flip-toolkit": "^7.0.5",
     "react-focus-trap": "^2.7.1",
     "react-helmet": "^5.2.1",
