--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clean-deep": "^3.0.4",
     "clsx": "^1.0.4",
     "d3": "^5.12.0",
+    "dagre": "^0.8.4",
     "deep-diff": "^1.0.2",
     "electron-is-dev": "^1.1.0",
     "firebase": "6.6.0",
