--- a/package.json
+++ b/package.json
@@ -63,8 +63,7 @@
     "react-dropdown-select": "^3.5.0",
     "react-flip-toolkit": "^7.0.5",
     "react-focus-trap": "^2.7.1",
-    "react-helmet": "^5.2.1",
-    "react-loadable": "^5.5.0",
+    "react-helmet-async": "^1.0.3",
     "react-localize-redux": "^3.5.3",
     "react-modal": "^3.10.1",
     "react-redux": "^7.1.1",
@@ -126,7 +125,7 @@
     ]
   },
   "devDependencies": {
-    "@codechecks/client": "^0.1.8",
+    "@codechecks/client": "^0.1.10",
     "@codechecks/lighthouse-keeper": "^0.1.2",
     "@storybook/addon-actions": "^5.1.11",
     "@storybook/addon-links": "^5.1.11",
