--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Installs Deps
-      run: npm install
+    - name: Install Deps
+      run: npm ci
     - name: Runs Tests
       run: npm test
     - name: Runs a LightHouse-Keeper Analysis
