--- a/.github/workflows/electronpublish.yml
+++ b/.github/workflows/electronpublish.yml
@@ -18,6 +18,8 @@ jobs:
           node-version: 12
       - run: npm ci
       - run: npm test
+        env:
+          CI: true
 
   publish-electron:
     needs: build
