--- a/.github/workflows/electronpublish.yml
+++ b/.github/workflows/electronpublish.yml
@@ -30,6 +30,7 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
+      - run: npm ci
       - run: npm run build
       - run: npm run release-standalone -- --mac --linux -c.snap.publish=github --win
         env:
