--- a/.github/workflows/electronpublish.yml
+++ b/.github/workflows/electronpublish.yml
@@ -23,7 +23,7 @@ jobs:
 
   publish-electron:
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
